# msci-project

./: LICENSE  README.md  pyproject.toml
dataset_info/really_mini/: CorrelationMatrix.html  DatasetSample.html  Description.html
labbook/history/: Hist--2024-01-19--00-33.json  Hist--2024-02-20--01-54.json  Hist--2024-02-20--10-03.json  Hist--2024-02-20--11-11.json  Hist--2024-03-08--00-02.json
labbook/logs/: Log--2024-01-19--00-33.json  Log--2024-02-20--01-54.json  Log--2024-02-20--10-03.json  Log--2024-02-20--11-11.json  Log--2024-02-26--19-32.h5  Log--2024-02-26--19-32.json  Log--2024-02-28--18-49.json  Log--2024-02-28--21-25.json  Log--2024-02-28--21-56.json  Log--2024-03-07--08-43.json  Log--2024-03-08--00-02.json
labbook/models/: Model--2024-01-19--00-33.h5  Model--2024-02-20--01-54.h5  Model--2024-02-20--10-03.h5  Model--2024-02-20--11-11.h5  Model--2024-02-26--19-32.pickle  Model--2024-02-28--18-49.pickle  Model--2024-02-28--21-25.pickle  Model--2024-03-07--08-43.pickle  Model--2024-03-08--00-02.h5
labbook/pickled/: ScaleVars--2024-03-07--08-43.pickle  StandardScaler--2024-02-28--21-25.pickle  StandardScaler--2024-02-28--21-56.pickle  (+3 more)
pyosccalc/: BMPTFlux.py  FitTools.py  FluxTools.py  LazyKinematics.py  NumiBeamline.py  OscCalc.py  PyOscCalc.ipynb  asymmetryToy.ipynb  config.py  covariance.ipynb  ogREADME.md  testBMPTFlux.ipynb
ref/: REFERENCES.md  avalible_data.txt  pidFunSelNotSel.ipynb  pidFunWithScann.ipynb  pidFun_reallymini.ipynb
src/: cuts.py  data.py  detectors.py  initial_analysis.py  labbook.py  temp_test.py  test.py  transforms.py  utils.py
(+276 files in other folders)
