[tool.poetry]
name = "Neutrino oscillatons at NOvA"
version = "0.1.0"
description = "Project aims to use deep learning techniques to measure neutrino oscillations at the NOvA detector."
authors = ["Aditya Marathe"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
hepunits = "^2.3.2"
particle = "^0.23.0"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10.*"
keras = ">=2.10.0,<2.11"
python-dotenv = "^1.0.0"
pandas = "^2.1.2"
tables = "^3.9.1"
scikit-learn = "^1.3.2"
pandas-stubs = "^2.1.1.230928"
dask = "^2023.11.0"
umap-learn = "^0.5.5"
shap = "^0.44.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
